# MultitaskQueue

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
doc/source/: conf.py  index.rst
doc/source/reference/: decorators.rst  multitask.rst  multitasks_organizer.rst  multitasks_queue.rst  task.rst  task_descriptor.rst  tasks_organizer.rst
doc/source/reference/api/: multitask_queue.decorators.autofill_task.rst  multitask_queue.decorators.general_task.rst  multitask_queue.decorators.independent_task.rst  multitask_queue.decorators.parallel_task.rst  multitask_queue.decorators.pre_execution_task.rst  multitask_queue.decorators.regular_task.rst  multitask_queue.multitask.Multitask.add_events.rst  multitask_queue.multitask.Multitask.add_tasks.rst  multitask_queue.multitask.Multitask.events.rst  multitask_queue.multitask.Multitask.rst  multitask_queue.multitask.Multitask.run.rst  multitask_queue.multitask.Multitask.tasks.rst  multitask_queue.multitask.MultitasksOrganizer.empty.rst  multitask_queue.multitask.MultitasksOrganizer.get.rst  multitask_queue.multitask.MultitasksOrganizer.put.rst  multitask_queue.multitask.MultitasksOrganizer.rst  multitask_queue.multitask.MultitasksQueue.rst  multitask_queue.multitask.MultitasksQueue.run.rst  multitask_queue.task.Task.rst  multitask_queue.task.Task.run.rst  multitask_queue.task.TaskDescriptor.rst  multitask_queue.task.TasksOrganizer.__iter__.rst  (+2 more)
multitask_queue/: __init__.py  decorators.py  multitask.py  task.py
multitask_queue/tests/: test_decorator.py  test_multitask.py  test_task.py
src/multitask_queue/: __init__.py  decorators.py  multitask.py  task.py
tests/: test_decorator.py  test_multitask.py  test_task.py
